fix(point) point overflow scroll

--- a/src/components/options/options.scss
+++ b/src/components/options/options.scss
@@ -223,7 +223,7 @@
 
         > ul {
           overflow-y: hidden !important;
-          height: 100%;
+          height: max-content;
         }
       }
 
